[gd_scene load_steps=3 format=3 uid="uid://bgtxrcisn2fbh"]

[ext_resource type="Script" uid="uid://b75wjl0xt2qlx" path="res://Themes/options_menu.gd" id="1_by3mi"]
[ext_resource type="Theme" uid="uid://yb0k0548rsyn" path="res://spinboxTheme.tres" id="2_bslr7"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.997936, 1)
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_by3mi")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="SafeLandingSpeedLabel2" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 2.45

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GridContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="SurfaceGravityLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.45
theme_override_font_sizes/font_size = 30
text = "  Gravity Force"
vertical_alignment = 1

[node name="SurfaceGravityValue" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_bslr7")
min_value = -10.0
max_value = 9.22337e+18
step = 0.001
allow_greater = true
allow_lesser = true
alignment = 1

[node name="SafeLandingSpeedLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.45
theme_override_font_sizes/font_size = 30
text = "  Landing Speed"
vertical_alignment = 1

[node name="SafeLandingSpeedValue" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_bslr7")
max_value = 9.22337e+18
value = 20.0
alignment = 1

[node name="FuelTankLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.45
theme_override_font_sizes/font_size = 30
text = "  Fuel"
vertical_alignment = 1

[node name="FuelTankValue" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_bslr7")
max_value = 9.22337e+18
value = 100.0
alignment = 1

[node name="ThrustLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.45
theme_override_font_sizes/font_size = 30
text = "  Thrust"
vertical_alignment = 1

[node name="ThrustValue" type="SpinBox" parent="PanelContainer/VBoxContainer/HBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_bslr7")
max_value = 9.22337e+18
value = 15000.0
alignment = 1

[node name="ApplyButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme = ExtResource("2_bslr7")
text = "Apply"

[connection signal="pressed" from="PanelContainer/VBoxContainer/ApplyButton" to="." method="_on_apply_button_pressed"]
